--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
     display: flex;
 }
 
-.left {
-    width: 40vw;
+.background {
+    width: 40vw;   
 }
 
 .img-caption {
@@ -20,7 +20,7 @@
     justify-content: space-around;
     align-items: center;
     position: absolute;
-    top: 100px;
+    top: 30vh;
     background-color: rgba(155, 155, 155, 0.925);
 }
 
@@ -28,13 +28,4 @@
     height: 100%;
 }
 
-.background {
-    width: 100%;   
-}
-
-.right {
-    display: flex;
-    flex-flow: row nowrap;
-
-}
 
