--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(//db.onlinewebfonts.com/c/7d460b18433753a097e5bc2bad7c8dd9?family=Norse);
 
 :root {
-    font-family: "norse", sans-serif;
+    font-family: sans-serif;
 }
 
 
@@ -9,12 +9,22 @@
     display: flex;
 }
 
+.left {
+    position: relative;
+    height: 100vh;
+}
+
 .background {
-    width: 30vw;   
+    overflow: hidden;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.left > * {
+    width: 30vw;
 }
 
 .img-caption {
-    width: 30vw;
     height: 100px;
     display: flex;
     align-items: center;
@@ -29,8 +39,74 @@
     height: 100%;
 }
 
+.credit {
+    font-size: 1rem;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    align-items: center;
+    text-align: center;
+    bottom: 20px;
+}
+
 .odin-text {
     font-size: 5rem;
     color: white;
+    font-family: "norse", sans-serif;
 }
 
+.right {
+    margin: 10vh 20vw 10vh 3vw;
+}
+
+.top-text, .form-title {
+    padding-bottom: 2rem;
+    font-weight: 600;
+}
+
+.inputs {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    row-gap: 1rem;
+}
+
+label {
+    font-size: 0.7rem;
+    font-weight: 500;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+}
+
+.button {
+    background-color: #4c704d;
+    padding: 15px 40px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+    margin: 2rem 0;
+}
+
+a:link {
+    color: #4c704d;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #4c704d;
+    text-decoration: none;
+}
+
+input {
+    margin: 0.3rem;
+    border-radius: 1px;
+    border: none;
+    padding: 0.5rem;
+}
+
+input:focus {
+    outline-color: #0051ff;
+}
